@@ -284,12 +284,12 @@ Open two shell screens or consoles:
 
 In shell number 1, run TURN server application:
  $ cd examples
- $ ./scripts/relay.sh
+ $ ./scripts/basic/relay.sh
 
 In shell number 2, run test client application:
 
  $ cd examples
- $ ./scripts/udp_c2c_client.sh
+ $ ./scripts/basic/udp_c2c_client.sh
 
 If the client application produces output and in approximately 22 seconds prints 
 the jitter, loss and round-trip-delay statistics, then everything is fine.
@@ -298,7 +298,7 @@ There is another more complex test:
 
 In shell number 1, run TURN server application:
  $ cd examples
- $ ./scripts/relay.sh
+ $ ./scripts/basic/relay.sh
  
 In shell number 2, run "peer" application:
  $ cd examples
@@ -307,15 +307,15 @@ In shell number 2, run "peer" application:
 In shell number 3, run test client application:
 
  $ cd examples
- $ ./scripts/udp_client.sh (or ./scripts/tcp_client.sh)
+ $ ./scripts/basic/udp_client.sh (or ./scripts/basic/tcp_client.sh)
 
-There is a similar set of examples/scripts/secure_* scripts for TURN environment 
-with authentication. This set of scripts is more complex, and checking the scripts options
-is useful for understanding how the TURN Server works:
+There is a similar set of examples/scripts/longtermsecure/* scripts for TURN environment 
+with long-term authentication mechanism. This set of scripts is more complex, 
+and checking the scripts options is useful for understanding how the TURN Server works:
 
 In shell number 1, run secure TURN server application:
  $ cd examples
- $ ./scripts/secure_relay.sh
+ $ ./scripts/longtermsecure/secure_relay.sh
  
 In shell number 2, run "peer" application:
  $ cd examples
@@ -324,12 +324,12 @@ In shell number 2, run "peer" application:
 In shell number 3, run secure test client application:
 
  $ cd examples
- $ ./scripts/secure_udp_client.sh
+ $ ./scripts/longtermsecure/secure_udp_client.sh
   
- (or ./scripts/secure_tcp_client.sh)
- (or ./scripts/secure_tls_client.sh)
- (or ./scripts/secure_dtls_client.sh)
- (or ./scripts/secure_udp_c2c.sh for "peerless" client-to-client communications)
+ (or ./scripts/longtermsecure/secure_tcp_client.sh)
+ (or ./scripts/longtermsecure/secure_tls_client.sh)
+ (or ./scripts/longtermsecure/secure_dtls_client.sh)
+ (or ./scripts/longtermsecure/secure_udp_c2c.sh for "peerless" client-to-client communications)
 
 The provided scripts are set for the local loopback communications, as an example and 
 as a test environment. Real networking IPs must be used in real work environments. 
@@ -339,9 +339,9 @@ Try wireshark to check the communications between client, turnserver and the pee
 Check the README.* files and the comments in the scripts relay.sh and secure_relay.sh 
 as a guidance how to run the TURN server.
 
-IX. OSX compilation notes
+IX. OS X compilation notes
 
-OSX usually has an older version of openssl supplied, with some Apple additions. 
+OS X usually has an older version of openssl supplied, with some Apple additions. 
 The compilation will produce lots of warnings which can be ignored, but the best 
 option is to install a good fresh openssl development library, free of Apple tweaks,
 from http://www.openssl.org. 
